--- a/about/index.html
+++ b/about/index.html
@@ -50,6 +50,34 @@ span:nth-child(7) {
   -webkit-animation-delay: -2s;
           animation-delay: -2s;
 }
+span:nth-child(8) {
+  -webkit-animation-delay: -0.2857142857s;
+          animation-delay: -0.2857142857s;
+}
+span:nth-child(9) {
+  -webkit-animation-delay: -0.5714285714s;
+          animation-delay: -0.5714285714s;
+}
+span:nth-child(10) {
+  -webkit-animation-delay: -0.8571428571s;
+          animation-delay: -0.8571428571s;
+}
+span:nth-child(11) {
+  -webkit-animation-delay: -1.1428571429s;
+          animation-delay: -1.1428571429s;
+}
+span:nth-child(12) {
+  -webkit-animation-delay: -1.4285714286s;
+          animation-delay: -1.4285714286s;
+}
+span:nth-child(13) {
+  -webkit-animation-delay: -1.7142857143s;
+          animation-delay: -1.7142857143s;
+}
+span:nth-child(14) {
+  -webkit-animation-delay: -2s;
+          animation-delay: -2s;
+}
 
 @-webkit-keyframes glow {
   0%, 100% {
@@ -222,8 +250,8 @@ a {
 	<div class="et-hero-tabs-container">
 		<a class="et-hero-tab" href="#tab-python">Python</a>
 		<a class="et-hero-tab" href="#tab-xx">xx</a>
-		<a class="et-hero-tab" href="#tab-react">Lua Script</a>
 		<a class="et-hero-tab" href="#tab-xxx">xxx</a>
+		<a class="et-hero-tab" href="#tab-lua">Lua Script</a>
 		<a class="et-hero-tab" href="#tab-xxxx">xxxx</a>
 		<span class="et-hero-tab-slider"></span>
 	</div>
@@ -239,13 +267,13 @@ a {
       <h1>xx</h1>
       <h3>something about xx</h3>
     </section>
-    <section class="et-slide" id="tab-react">
-      <h1>Lua Script</h1>
-      <h3>basics...</h3>
-    </section>
     <section class="et-slide" id="tab-xxx">
       <h1>xxx</h1>
       <h3>something about xxx</h3>
+    </section>
+    <section class="et-slide" id="tab-lua">
+      <h1>Lua Script</h1>
+      <h3>basics...</h3>
     </section>
     <section class="et-slide" id="tab-xxxx">
       <h1>xxxx</h1>
