--- a/index.html
+++ b/index.html
@@ -512,8 +512,8 @@ body {font-family: "Lato", sans-serif;}
 		<a href="/projects/#">#</a>
 	</div>
 </li>
-<li class="right">
-	<a href="#"><form method="get" action="https://www.google.com/custom" target="google_window">
+<li class="right"><a>
+	<form method="get" action="https://www.google.com/custom" target="google_window">
 	<input type="hidden" name="domains" value="zoj.me">
 	<input type="text" name="q" style="height:18px;" placeholder="Search " maxlength="255" value="">
 	<input type="image" name="sa" height="15px" src="pictures/search_db25x.png" value="Search">
@@ -651,50 +651,50 @@ Obecnie z tzw. shared hostingami (hostingami współdzielonymi) jest tak że co 
 
 	<!-- SERVICES MAINTAB DIV -->
 <div class="main">
-TESTING TESTING TESTING TESTING ...
+<h3>Services issued by ZOJ.ME</h3>
 </div>
 
 <div class="price-table-wrapper">
   <div class="pricing-table featured-table">
-    <h2 class="pricing-table__header">- BASIC -</h2>
+    <h2 class="pricing-table__header">- SUBDOMAIN -</h2>
     <h3 class="pricing-table__price">0€<sm> Forever</sm></h3>
-    <a target="_blank" class="pricing-table__button" href="https://cloud.zoj.me/index.php/apps/registration/">
-		Register for free!
+    <a target="_blank" class="pricing-table__button" href="mailto:incoming@zoj.me">
+		Contact for free subdomain.zoj.me!
     </a>
     <ul class="pricing-table__list">
       <li></li>
-      <li>1gb storage space</li>
-      <li>Best price!</li>
-      <li>No support</li>
+      <li>Also free email 1gb</li>
+      <li>ZERO COST!</li>
+      <li>Free support</li>
     </ul>
   </div>
   <div class="pricing-table featured-table">
-    <h2 class="pricing-table__header">- PERSONAL -</h2>
-    <h3 class="pricing-table__price">3€<sm>/year</sm></h3>
-    <a target="_blank" class="pricing-table__button" href="https://cloud.zoj.me/index.php/apps/registration/">
-		Register for free!
+    <h2 class="pricing-table__header">- LOGO DESIGN -</h2>
+    <h3 class="pricing-table__price">3€<sm>/one logo</sm></h3>
+    <a target="_blank" class="pricing-table__button" href="mailto:incoming@zoj.me">
+		Buy vector logo for company/website!
     </a>
     <ul class="pricing-table__list">
       <li></li>
-      <li>20gb storage space</li>
+      <li>One logo in up to 10 variants</li>
       <li>Best price!</li>
-      <li>Ticket system support</li>
+      <li>Included 1 month support</li>
     </ul>
   </div>
-  <div class="pricing-table featured-table">
-    <h2 class="pricing-table__header">- BUSINESS -</h2>
-    <h3 class="pricing-table__price">8€<sm>/year</sm></h3>
-    <a target="_blank" class="pricing-table__button" href="https://cloud.zoj.me/index.php/apps/registration/">
-		Register for free!
+  <!--<div class="pricing-table featured-table">
+    <h2 class="pricing-table__header">- Lua Script Training -</h2>
+    <h3 class="pricing-table__price">20€<sm>/hour</sm></h3>
+    <a target="_blank" class="pricing-table__button" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=AWTS6A5E7JEXC&source=url">
+		Learn programming!
     </a>
     <ul class="pricing-table__list">
       <li></li>
-      <li>200gb storage space</li>
+      <li>SELECT COURSE HOURS</li>
       <li>Best price!</li>
-      <li>Ticket system support</li>
+      <li>Perfect if you never programmed</li>
     </ul>
-  </div>
-    <div class="pricing-table featured-table">
+  </div>-->
+  <!--<div class="pricing-table featured-table">
     <h2 class="pricing-table__header">- ENTERPRISE -</h2>
     <h3 class="pricing-table__price">30€<sm>/year</sm></h3>
     <a target="_blank" class="pricing-table__button" href="https://cloud.zoj.me/index.php/apps/registration/">
@@ -706,7 +706,7 @@ TESTING TESTING TESTING TESTING ...
       <li>Best price!</li>
       <li>Ticket system support</li>
     </ul>
-  </div>
+  </div>-->
 </div>
 
 </div>
@@ -742,14 +742,9 @@ We also share subdomains for webmasters and programmers who doesn't have their o
 	<div class="divTableCell">
 	
 		<div class="footerty">
-		All Rights Reserved ©2019/2020 <a href="https://zoj.me/about/">Jeremi ErtY'wek</a> | Hosted on Google servers.<br>
-		<input type="checkbox" id="toggle">
-		<label onclick="loadDoc()" for="toggle">About ZOJ.ME</label>
-		<dialog style="">ZOJ.ME Services <label for="toggle">X</label>
-		<p><div id="xhttpget">
-		
-		</div></p>
-		</dialog>
+		All Rights Reserved ©2019/2020 <a href="https://zoj.me/about/">Jeremi ErtY'wek</a> | Hosted on Google servers | 
+		<input type="checkbox" id="toggle"><label onclick="loadDoc()" for="toggle">About ZOJ.ME</label>
+		<dialog style="">ZOJ.ME Services <label for="toggle">X</label><p><div id="xhttpget"> </div></p></dialog>
 		<!--In case you want a subdomain contact me via <a href="https://cutt.ly/De248Sz">facebook</a> or discord: ErtY#9909-->
 		
 		</div>
