--- a/index.html
+++ b/index.html
@@ -505,11 +505,10 @@ body {font-family: "Lato", sans-serif;}
 
 														<!-- H	E	A	D	E	R -->
 <ul class="topnav">
-<li><div><a class="pagelink" onclick="openPage(event, 'page1')" id="PageDefaultOpen" href="#">News</a></div></li>
-
-<li><div><a class="pagelink" onclick="openPage(event, 'page2')" href="#">Articles</a></div></li>
-<li><div><a class="pagelink" onclick="openPage(event, 'page3')" href="#">Services</a></div></li>
-<li><div><a class="pagelink" onclick="openPage(event, 'page4')" href="#">Projects</a></div></li>
+<li><div><a class="pagelink" onclick="openPage(event, 'page1')" id="PageDefaultOpen" href="#nw">News</a></div></li>
+<li><div><a class="pagelink" onclick="openPage(event, 'page2')" href="#ac">Articles</a></div></li>
+<li><div><a class="pagelink" onclick="openPage(event, 'page3')" href="#sc">Services</a></div></li>
+<li><div><a class="pagelink" onclick="openPage(event, 'page4')" href="#pc">Projects</a></div></li>
 <!--<li class="dropdown"><a href="#" class="dropbtn">Dropdown</a>
 	<div class="dropdown-content"><a href="#">Dropdown1</a><a href="#">Dropdown2</a></div>
 </li>-->
@@ -518,7 +517,7 @@ body {font-family: "Lato", sans-serif;}
 	<form method="get" action="https://www.google.com/custom" target="google_window">
 	<input type="hidden" name="domains" value="zoj.me">
 	<input type="text" name="q" style="height:18px;" placeholder="Search " maxlength="255" value="">
-	<input type="image" name="sa" height="15px" src="pictures/search_db25x.png" value="Search">
+	<input type="image" name="sa" height="17px" src="pictures/search_db25x.png" value="Search">
 	<input type="hidden" type="radio" name="sitesearch" value="">
 	<input type="hidden" type="radio" name="sitesearch" value="zoj.me" checked="checked">
 	</form></a>
