--- a/index.html
+++ b/index.html
@@ -254,7 +254,11 @@ ul.topnav li a:hover:not(.active) {background-color: #111;}
 ul.topnav li a.active {background-color: #ffff00;}
 ul.topnav li a.active {color: #9900ff;}
 
-ul.topnav li.right {float: right;}
+ul.topnav li.right {                                                                     /* KLASA UL LI.RIGHT */
+	float: right;
+	text-align:center;
+
+}
 
 @media screen and (max-width: 599px) {
   ul.topnav li.right, 
@@ -508,19 +512,19 @@ body {font-family: "Lato", sans-serif;}
 <li><div><a class="pagelink" onclick="openPage(event, 'page1')" id="PageDefaultOpen" href="#nw">News</a></div></li>
 <li><div><a class="pagelink" onclick="openPage(event, 'page2')" href="#ac">Articles</a></div></li>
 <li><div><a class="pagelink" onclick="openPage(event, 'page3')" href="#sc">Services</a></div></li>
-<li><div><a class="pagelink" onclick="openPage(event, 'page4')" href="#pc">Projects</a></div></li>
+<li><div><a class="pagelink" href="/projects/">Projects</a></div></li>
 <!--<li class="dropdown"><a href="#" class="dropbtn">Dropdown</a>
 	<div class="dropdown-content"><a href="#">Dropdown1</a><a href="#">Dropdown2</a></div>
 </li>-->
 
-<li class="right"><a>
-	<form method="get" action="https://www.google.com/custom" target="google_window">
+<li style="float: right;" class="right"><div style="float: center; border-style: none; width: 199px; height: 47px;">
+	<form method="get" action="https://www.google.com/custom" target="google_window"><a>
 	<input type="hidden" name="domains" value="zoj.me">
-	<input type="text" name="q" style="height:18px;" placeholder="Search " maxlength="255" value="">
-	<input type="image" name="sa" height="17px" src="pictures/search_db25x.png" value="Search">
+	<input type="text" name="q" style="height:18px;" placeholder="Search on *.zoj.me/*" maxlength="255" value="">
 	<input type="hidden" type="radio" name="sitesearch" value="">
 	<input type="hidden" type="radio" name="sitesearch" value="zoj.me" checked="checked">
-	</form></a>
+	<input type="image" name="sa" height="15px" src="pictures/search_db25x.png" value="Search">
+	</a></div></form>
 </li>
 </ul>
 
