--- a/projects/index.html
+++ b/projects/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>ZOJ.ME</title>
+		<title>PROJECTS on ZOJ.ME</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,8 +17,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html"><strong>HOMEPAGE</strong></a></h1>
-						<h1><a href="/PROJECTS/"><strong>PROJECTS</strong></a></h1>
+						<h1><a href="index.html"><strong>PROJECTS</strong></a></h1>
+						<h1><a href="https://zoj.me/?ref=projectspage"><strong>Homepage</strong></a></h1>
 						<nav>
 							<ul>
 								<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
