--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pl" lang="pl">
 <!--    R	E	A	D	M	E
-Similar navbar effect can be made with a lot less code using bootstrap and jQuery https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_navbar_collapse
+Similar navbar effect can be made with a lot 'less' code using bootstrap and jQuery https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_navbar_collapse
 I've made this only for my usage on https://zoj.me shared over an CDN
 #5900b3
 -->
@@ -509,8 +509,8 @@ body {font-family: "Lato", sans-serif;}
 
 														<!-- H	E	A	D	E	R -->
 <ul class="topnav">
-<li><div><a class="pagelink" onclick="openPage(event, 'page1')" id="PageDefaultOpen" href="#nw">News</a></div></li>
-<li><div><a class="pagelink" onclick="openPage(event, 'page2')" href="#ac">Articles</a></div></li>
+<li><div><a class="pagelink" onclick="openPage(event, 'page1')" id="PageDefaultOpen" href="?page=news">News</a></div></li>
+<li><div><a class="pagelink" onclick="openPage(event, 'page2')" href="?page=articles">Articles</a></div></li>
 <li><div><a class="pagelink" onclick="openPage(event, 'page3')" href="#sc">Services</a></div></li>
 <li><div><a class="pagelink" href="/projects/">Projects</a></div></li>
 <!--<li class="dropdown"><a href="#" class="dropbtn">Dropdown</a>
