--- a/projects/index.html
+++ b/projects/index.html
@@ -95,9 +95,9 @@
 						<div class="inner split">
 							<div>
 								<section>
-									<h2>Official Jeremi ErtYwek Portfolio</h2>
+									<h2>ZOJ.ME Projects</h2>
 									<p>
-									Welcome to my homepage. Checkout my projects.
+									This is list of projects supported by ZOJ.ME
 									
 									
 									<p>
