--- a/index.html
+++ b/index.html
@@ -509,9 +509,9 @@ body {font-family: "Lato", sans-serif;}
 
 														<!-- H	E	A	D	E	R -->
 <ul class="topnav">
-<li><div><a class="pagelink" onclick="openPage(event, 'page1')" id="PageDefaultOpen" href="?page=news">News</a></div></li>
-<li><div><a class="pagelink" onclick="openPage(event, 'page2')" href="?page=articles">Articles</a></div></li>
-<li><div><a class="pagelink" onclick="openPage(event, 'page3')" href="#sc">Services</a></div></li>
+<li><div><a class="pagelink" onclick="openPage(event, 'page1')" id="PageDefaultOpen" href="#p=n">News</a></div></li>
+<li><div><a class="pagelink" onclick="openPage(event, 'page2')" href="#p=ac">Articles</a></div></li>
+<li><div><a class="pagelink" onclick="openPage(event, 'page3')" href="#p=sc">Services</a></div></li>
 <li><div><a class="pagelink" href="/projects/">Projects</a></div></li>
 <!--<li class="dropdown"><a href="#" class="dropbtn">Dropdown</a>
 	<div class="dropdown-content"><a href="#">Dropdown1</a><a href="#">Dropdown2</a></div>
@@ -718,156 +718,8 @@ Obecnie z tzw. shared hostingami (hostingami współdzielonymi) jest tak że co 
 														</div><!-- page3 end-->
 
 														<div id="page4" class="pagecontent"><!-- page4 begin -->
-<div id="dwa">
-
-	<!-- PROJECTS MAINTAB DIV -->
-<div class="main">
-
-<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Header -->
-					<header id="header">
-						<h1><a href="index.html"><strong>HOMEPAGE</strong></a></h1>
-						<h1><a href="/PROJECTS/"><strong>PROJECTS</strong></a></h1>
-						<nav>
-							<ul>
-								<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
-							</ul>
-						</nav>
-					</header>
-
-				<!-- Main -->
-					<div id="main">
-						<article class="thumb">
-							<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" /></a>
-							<h2>Logo/Brand & Vector Design</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
-							<h2>News Panel Goes here</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
-							<h2>HOMEPAGE UNDER CONSTRUCTION</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
-							<h2>Pretty Photos</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
-							<h2>Cursis aliquam nisl</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
-							<h2>Sed consequat phasellus</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
-							<h2>Mauris id tellus arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
-							<h2>Nunc vehicula id nulla</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" /></a>
-							<h2>Neque et faucibus viverra</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" /></a>
-							<h2>Mattis ante fermentum</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" /></a>
-							<h2>Sed ac elementum arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer" class="panel">
-						<div class="inner split">
-							<div>
-								<section>
-									<h2>Official Jeremi ErtYwek Portfolio</h2>
-									<p>
-									Welcome to my homepage. Checkout my projects.
-									
-									
-									<p>
-								</section>
-								<section>
-									<h2>Follow me on ...</h2>
-									<ul class="icons">
-										<li><a target="_blank" href="https://t2m.io/X0KoxhdH" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a target="_blank" href="https://t2m.io/8DfQeory" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a target="_blank" href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a target="_blank" href="https://t2m.io/BaPOofNu" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a target="_blank" href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-										<li><a target="_blank" href="https://t2m.io/fPbDgPWT" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-										<li><a target="_blank" href="https://t2m.io/RDRVjXRo" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
-									</ul>
-								</section>
-								<p class="copyright">
-									Copyright &copy; 2019/2020 All Rights Reserved Jeremi ErtYwek <br> Multiverse Theme by HTML5 UP.
-								</p>
-							</div>
-							<div>
-								<section><!--
-									<h2>Get in touch</h2>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<input type="text" name="name" id="name" placeholder="Name" />
-											</div>
-											<div class="field half">
-												<input type="text" name="email" id="email" placeholder="Email" />
-											</div>
-											<div class="field">
-												<textarea name="message" id="message" rows="4" placeholder="Message"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><input type="submit" value="Send" class="primary" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</form>-->
-								</section>
-							</div>
-						</div>
-					</footer>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-</div>
-
-
-
+<div id="cztery">
+#HIDDEN CONTENT
 </div>
 														</div><!-- page4 end-->
 
