--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@ body {font-family: "Lato", sans-serif;}
 
 														<!-- H	E	A	D	E	R -->
 <ul class="topnav">
-<li><div><a class="pagelink" onclick="openPage(event, 'page1')" id="PageDefaultOpen" href="#p=n">News</a></div></li>
+<li><div><a class="pagelink" onclick="openPage(event, 'page1')" id="PageDefaultOpen" href="#">News</a></div></li>
 <li><div><a class="pagelink" onclick="openPage(event, 'page2')" href="#p=ac">Articles</a></div></li>
 <li><div><a class="pagelink" onclick="openPage(event, 'page3')" href="#p=sc">Services</a></div></li>
 <li><div><a class="pagelink" href="/projects/">Projects</a></div></li>
