--- a/projects/index.html
+++ b/projects/index.html
@@ -29,62 +29,62 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" /></a>
+							<a href="https://zoj.me/pictures/projects/01.jpg" class="image"><img src="https://zoj.me/pictures/projects/01m.jpg" alt="" /></a>
 							<h2>Logo/Brand & Vector Design</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<p>We provide vector graphic design and editing. Including but not limiting to Logo design, Vector design.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
-							<h2>News Panel Goes here</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="https://zoj.me/pictures/projects/02.jpg" class="image"><img src="https://zoj.me/pictures/projects/02m.jpg" alt="" /></a>
+							<h2>G World forum. Dedicated for LTD Gem.</h2>
+							<p>G forum is a big forum dedicated to LTD Gem community and partners.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
+							<a href="https://zoj.me/pictures/projects/03.jpg" class="image"><img src="https://zoj.me/pictures/projects/03m.jpg" alt="" /></a>
 							<h2>HOMEPAGE UNDER CONSTRUCTION</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
+							<a href="https://zoj.me/pictures/projects/04.jpg" class="image"><img src="https://zoj.me/pictures/projects/04m.jpg" alt="" /></a>
 							<h2>Pretty Photos</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
+							<a href="https://zoj.me/pictures/projects/05.jpg" class="image"><img src="https://zoj.me/pictures/projects/05m.jpg" alt="" /></a>
 							<h2>Cursis aliquam nisl</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
+							<a href="https://zoj.me/pictures/projects/06.jpg" class="image"><img src="https://zoj.me/pictures/projects/06m.jpg" alt="" /></a>
 							<h2>Sed consequat phasellus</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
+							<a href="https://zoj.me/pictures/projects/07.jpg" class="image"><img src="https://zoj.me/pictures/projects/07m.jpg" alt="" /></a>
 							<h2>Mauris id tellus arcu</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
+							<a href="https://zoj.me/pictures/projects/08.jpg" class="image"><img src="https://zoj.me/pictures/projects/08m.jpg" alt="" /></a>
 							<h2>Nunc vehicula id nulla</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" /></a>
+							<a href="https://zoj.me/pictures/projects/09.jpg" class="image"><img src="https://zoj.me/pictures/projects/09m.jpg" alt="" /></a>
 							<h2>Neque et faucibus viverra</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" /></a>
+							<a href="https://zoj.me/pictures/projects/10.jpg" class="image"><img src="https://zoj.me/pictures/projects/10m.jpg" alt="" /></a>
 							<h2>Mattis ante fermentum</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" /></a>
+							<a href="https://zoj.me/pictures/projects/11.jpg" class="image"><img src="https://zoj.me/pictures/projects/11m.jpg" alt="" /></a>
 							<h2>Sed ac elementum arcu</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
+							<a href="https://zoj.me/pictures/projects/12.jpg" class="image"><img src="https://zoj.me/pictures/projects/12m.jpg" alt="" /></a>
 							<h2>Vehicula id nulla dignissim</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
