--- a/about/index.html
+++ b/about/index.html
@@ -138,7 +138,7 @@ animation: erty 5s ease infinite;
 <style>
   body {
   font-family: "Century Gothic", 'Lato', sans-serif;
-  background-color: #246b1a;
+  background-color: #751aff;
 }
 
 a {
@@ -167,7 +167,7 @@ a {
 .et-slide h3 {
   font-size: 1rem;
   letter-spacing: 0.3rem;
-  opacity: 0.6;
+  opacity: 0.7;
 }
 
 .et-hero-tabs-container {
@@ -248,20 +248,20 @@ a {
 <span>J</span><span>E</span><span>R</span><span>E</span><span>M</span><span>I</span> "<span>E</span><span>R</span><span>T</span><span>Y</span><span>W</span><span>E</span><span>K</span>"
 	</h1>
 	<div class="et-hero-tabs-container">
-		<a class="et-hero-tab" href="#tab-python">Python</a>
+		<a class="et-hero-tab" href="#tab-programming">Programming</a>
 		<a class="et-hero-tab" href="#tab-xx">xx</a>
 		<a class="et-hero-tab" href="#tab-xxx">xxx</a>
-		<a class="et-hero-tab" href="#tab-lua">Lua Script</a>
 		<a class="et-hero-tab" href="#tab-xxxx">xxxx</a>
+		<a class="et-hero-tab" href="#tab-xxxxx">xxxxx</a>
 		<span class="et-hero-tab-slider"></span>
 	</div>
 </section>
 
   <!-- Main -->
   <main class="et-main">
-    <section class="et-slide" id="tab-python">
-      <h1>Python</h1>
-      <h3>Python OOP, Django</h3>
+    <section class="et-slide" id="tab-programming">
+      <h1>Programming</h1>
+      <h3>Lua Script [also RBX.lua], Python</h3>
     </section>
     <section class="et-slide" id="tab-xx">
       <h1>xx</h1>
@@ -271,13 +271,13 @@ a {
       <h1>xxx</h1>
       <h3>something about xxx</h3>
     </section>
-    <section class="et-slide" id="tab-lua">
-      <h1>Lua Script</h1>
-      <h3>basics...</h3>
-    </section>
     <section class="et-slide" id="tab-xxxx">
       <h1>xxxx</h1>
       <h3>something about xxxx</h3>
+    </section>
+    <section class="et-slide" id="tab-xxxxx">
+      <h1>xxxx</h1>
+      <h3>something about xxxxx</h3>
     </section>
   </main>
 
