--- a/about/index.html
+++ b/about/index.html
@@ -260,7 +260,7 @@ a {
   <!-- Main -->
   <main class="et-main">
     <section class="et-slide" id="tab-programming">
-      <h1>Programming</h1>
+      <h1>hEY! I'm Programmer</h1>
       <h3>Lua Script [also RBX.lua], Python</h3>
     </section>
     <section class="et-slide" id="tab-xx">
@@ -276,7 +276,7 @@ a {
       <h3>something about xxxx</h3>
     </section>
     <section class="et-slide" id="tab-xxxxx">
-      <h1>xxxx</h1>
+      <h1>xxxxx</h1>
       <h3>something about xxxxx</h3>
     </section>
   </main>
