--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@ Obecnie z tzw. shared hostingami (hostingami współdzielonymi) jest tak że co 
 <div style="padding: 20 0 20 0;" class="main">
 <img class="imgincon" width="280vw" src="pictures/ZOJbranding.png">
 ZOJ.ME Is a place for viral news from internet, blog competitions and tutorials.
-We also share subdomains for webmasters and programmers who doesn't have their own domain.
+
 
 
 </div>
@@ -760,9 +760,9 @@ We also share subdomains for webmasters and programmers who doesn't have their o
 	<div class="divTableCell">
 	
 		<div class="footerty">
-		All Rights Reserved ©2019/2020 <a href="https://zoj.me/about/">Jeremi ErtY'wek</a> | Hosted on Google servers | 
-		<input type="checkbox" id="toggle"><label onclick="loadDoc()" for="toggle">About ZOJ.ME</label>
-		<dialog style="">ZOJ.ME Services <label for="toggle">X</label><p><div id="xhttpget"> </div></p></dialog>
+		All Rights Reserved ©2019/2020 <a href="https://zoj.me/about/">Jeremi ErtY'wek</a> | Hosted on Google servers. 
+		<!--<input type="checkbox" id="toggle"><label onclick="loadDoc()" for="toggle">About ZOJ.ME</label>
+		<dialog style="">ZOJ.ME Services <label for="toggle">X</label><p><div id="xhttpget"> </div></p></dialog>-->
 		<!--In case you want a subdomain contact me via <a href="https://cutt.ly/De248Sz">facebook</a> or discord: ErtY#9909-->
 		
 		</div>
@@ -784,7 +784,7 @@ function loadDoc() {
       this.responseText;
     }
   };
-  xhttp.open("GET", "https://zoj.me/out/abouterty.html", true);
+  xhttp.open("GET", "https://zoj.me/aboutzoj.txt", true);
   xhttp.send();
 }
 </script>
