--- a/LTD/r1/index.html
+++ b/LTD/r1/index.html
@@ -95,11 +95,11 @@ body {
 <!-- B O D Y -->
 
 <div class="FAKEheader">
-  <h2>REGULAMIN gildii z gry FoE należącej do LTD Gem</h2> <!-- HEADLINE --> 
+  <h2>REGULAMIN GWorld FoE należącej do LTD Gem</h2> <!-- HEADLINE --> 
 </div>
 <!-- H E A D E R -->
 <div class="header">
-  <h2>REGULAMIN gildii z gry FoE należącej do LTD Gem</h2> <!-- HEADLINE -->
+  <h2>REGULAMIN GWorld FoE należącej do LTD Gem</h2> <!-- HEADLINE -->
   <div class="progress-container">
     <div class="progress-bar" id="myBar"></div>
   </div>  
@@ -124,7 +124,7 @@ Maksymalna Epoka: PostModernizm. Gracze z epok Współczesność i dalszych będ
 Poradnik odnośnie walki: <a target="_blank" href="https://www.youtube.com/watch?v=VKTtnswnWDU">https://www.youtube.com/watch?v=VKTtnswnWDU</a>
 Koniec załącznika</p>
 
-<h3>REGULAMIN gildii LTD GWorld ustalony przez Rade LTD</h3>
+<h3>REGULAMIN GWorld ustalony przez Rade LTD</h3>
 
  <p>
 Obrazą/obrażaniem nazywamy nachalne wiadomości i/lub czynności w grze wobec któregokolwiek szlachcica które moderator bądź Baron uznaje za niekulturalne.<br>
@@ -135,24 +135,24 @@ Szlachcic może mieć status AKTYWNY bądź GNW i zmienia on wymagania regulamin
  <br>
 1. Nie wolno obrażać żadnego szlachcica w naszej gildii. <br>
 1.1. Obrażanie moderatora bądź Barona kończy się obowiązkową karą zaznaczoną w punkcie 9. <br>
-<strong>2. Szlachcic AKTYWNY może wybrać między 2 obowiązkami 2.1 lub 2.2 inaczej poniesie karę zaznaczoną w punkcie 9. <br>
-2.1. Wrzucanie surowców z swojej epoki, 2 poprzednich epok oraz następnej epoki do skarbca gildyjnego w ilości 100 w ciągu 2 miesięcy. <br>
-2.2. Branie udział w Wyprawie Gildyjnej co najmniej kończąc 1 etap [16/48konfliktów]. <br></strong>
-2.3. Punkt 2 regulaminu nie dotyczy szlachciców o opłaconym statusie GNW. <br>
+<strong>2. Szlachcic musi wybrać między 2 obowiązkami 2.1 lub 2.2 inaczej poniesie karę zaznaczoną w punkcie 9. <br>
+2.1. Wrzucanie surowców z swojej epoki, poprzedniej epoki oraz następnej epoki do skarbca gildyjnego w sumie 100 w ciągu miesiąca. <br>
+2.2. Branie udziału w Wyprawie Gildyjnej co najmniej kończąc 1 etap [16/48konfliktów] każdego tygodnia. <br></strong>
+2.3. Punkt 2.1. i 2.2. regulaminu nie dotyczy szlachciców o opłaconym statusie GNW. <br>
 2.4. Wszelkie nadwyżki z podpunktu 2.1 są uznawane za dary i nie są wliczane do balansu w następnym dwumiesięczniku. <br>
 3. Reklamowanie/polecanie innej gildii w grze FoE jest karane wydaleniem z gildii i dodaniem gracza na czarną listę lub karą wyznaczoną przez Barona. <br>
 3.1. Reklamowanie gier, usług oraz rzeczy nienależących do organizacji LTD Gem lub Innogames* jest karane wydaleniem z gildii i dodaniem gracza na czarną listę. <br>
 3.2. Osoby ukarane zgodnie z punktem 3 mogą zgłosić zażalenie odnośnie wydanego wyroku do Rady LTD. <br>
-4. REGULAMIN obowiązuje wraz z opublikowaniem jego aktualnej wersji pod adresem https://zoj.me/ltd/regg/#. <br>
-4.1. ZAŁĄCZNIKI do regulaminu obowiązują wraz z opublikowaniem ich aktualnej wersji pod adresem https://zoj.me/ltd/regg/#. <br>
+4. REGULAMIN obowiązuje wraz z opublikowaniem jego aktualnej wersji pod adresem https://zoj.me/ltd/r1/#. <br>
+4.1. ZAŁĄCZNIKI do regulaminu obowiązują wraz z opublikowaniem ich aktualnej wersji pod adresem https://zoj.me/ltd/r1/#. <br>
 4.2. Zmiany w regulaminie są wprowadzane w chwili ich potrzeby i obowiązują od momentu wskazanego w punkcie 4. <br>
 5. Szlachcic, który w rozumieniu Barona i/lub regulaminu utrudnia grę innym szlachcicom bądź zmianę tudzież postęp gildii zostaje ukarany zgodnie z punktem 9. <br>
 6. Każdy szlachcic ma prawo rekrutować innych graczy do gildii, informować o misjach gildii oraz potencjalnych graczach chętnych do dołączenia. <br>
 6.1. Zabronione jest rekrutowanie graczy z tzw czarnej listy stanowiącej załącznik do regulaminu gildii. <br>
 7. Każdy szlachcic spełniający wymogi regulaminu ma prawo do otrzymania statusu gracz na wakacjach dalej nazywanego GNW. <br>
-7.1. Status GNW zwalnia z wpłat do skarbca gildyjnego, oraz misji gildii ustalonych przez Barona bądź moderatora. <br>
+7.1. Status GNW zwalnia z wpłat do skarbca gildyjnego, oraz misji gildii ustalonych przez Barona bądź moderatora (w tym tych ustalonych pod 2.1 i 2.2). <br>
 7.2. Statusu GNW nie otrzyma osoba która nie wpłaci wcześniej obowiązkowego cła patrz punkt 8. <br>
-7.3. W celu zmiany swojego statusu jak anulowania GNW informujemy o chęci Barona i Moderatora. <br>
+7.3. W celu zmiany swojego statusu jak anulowania GNW informujemy o tej chęci Barona i/lub Moderatora. <br>
 7.4. Szlachcic traci GNW po conajmniej 2 latach braku aktywności w gildii. <br>
 7.5. Zmiana regulaminu nie zmusza do ponownej zapłaty za GNW jeżeli raz już został on opłacony zgodnie z regulaminem i załącznikami. <br>
 8. Cło to jednorazowa opłata za otrzymanie statusu GNW. <br>
@@ -176,25 +176,25 @@ Szlachcic może mieć status AKTYWNY bądź GNW i zmienia on wymagania regulamin
 11.9. Baron/moderator nie może przekazywać szlachcicom wiedzy która bezpośrednio zagraża istnieniu gildii i/lub LTD Gem. <br>
 11.10. Szlachcic które wie o przekazywaniu przez Barona/moderatora informacji zagrażających gildii i/lub LTD Gem innym graczom bądź komukolwiek poza grą musi natychmiast poinformować Rade LTD i może oczekiwać nagrody od Rady LTD. <br>
 12. Szlachcic lub gracz który należał do gildii którego działania jednoznacznie stanowią zagrożenie dla gildii i/lub org.LTD Gem musi zostać dodany na czarną listę przez Barona. <br>
-13. Otrzymanie statusu PCK nie wymaga opłat i jest ustalane przez Barona. <br>
+13. Otrzymanie statusu PCK nie wymaga opłat i jest ustalane przez Rade LTD. <br>
 13.1. PCK mogą otrzymać osoby poszkodowane poza grą w realnym życiu. <br>
-13.2. Status PCK jest pomocą w postaci pieniędzy lub przedmiotu zakładając że pomoc ta nie łamie regulaminu głównego LTD. <br>
-14. Szlachcic jest zobowiązany do pozostania w Epoce zaznaczonej w załączniku jako maksymalną inaczej zostaje wydalony z gildii. <br>
+13.2. Status PCK jest pomocą w postaci pieniędzy lub przedmiotu zakładając że pomoc ta nie łamie regulaminu głównego Rady LTD. <br>
+14. Szlachcic jest zobowiązany do pozostania między epokami ustalonymi jako maksymalną/minimalną inaczej zostaje wydalony z gildii. Informacje o maksymalnej/minimalnej epoce można znaleść w opisie gildii, regulaminie gildii. Można zapytać o dokładną informację Barona.<br>
 15. <br>
-16. <br>
-17. Terminy tudzież określenia nie wytłumaczone w regulaminie i/lub załącznikach mają stałą definicję znaną Radzie LTD. <br>
-17.1. USTALENIA i OPŁATY są zaznaczone w regulaminie lub jego załącznikach dostępnych do wglądu publicznie tzw w internecie i muszą przestrzegać regulaminu głównego LTD. <br>
+16. Zakazane jest rozprowadzanie nieprawdziwych informacji na temat epidemii. <br>
+17. Terminy tudzież określenia nie wytłumaczone w regulaminie i/lub załącznikach mają 'stałą' definicję znaną Radzie LTD. Zapytaj się o ich znaczenie Barona. <br>
+17.1. USTALENIA i OPŁATY są zaznaczone w regulaminie lub jego załącznikach dostępnych do wglądu publicznie tzw w internecie i muszą przestrzegać regulaminu głównego Rady LTD. <br>
 17.2. Opłaty za czynności i ustalenia nie ustalone w tym regulaminie bądź załącznikach ustala Baron i informacje o nich uzyskasz od Barona bądź moderatora.
 
 Koniec REGULAMINU.</p>
-z dnia 14 lutego 2020 Edycja numer 44 Autor: Jeremi "ErtYwek"
+z dnia 20 kwietnia 2020 Edycja numer 45 Autor: Jeremi "ErtYwek"
 <p>//// //// //// //// |Chameleon is a invisible player| \\\\ \\\\ \\\\ \\\\</p>
 Kontakt z Radą LTD: <a target="_blank" href="https://www.facebook.com/groups/ltdgw/">https://www.facebook.com/groups/ltdgw/</a>
 Kruczki Regulaminowe:
 Jeśli punkt wyznacza jako karę możliwości z punktu 9 to gracz musi być poinformowany o punkcie który decyduje o karze z punktu 9. <br>
 
 
-<h3>CZARNA LISTA czyli nieakceptowani w gildii gracze:</h3>
+<h3>Załącznik 2 do REGULAMINU "CZARNA LISTA czyli nieakceptowani w gildii gracze:"</h3>
 
 </div>
 
