--- a/LTD/r1/index.html
+++ b/LTD/r1/index.html
@@ -139,7 +139,7 @@ Szlachcic może mieć status AKTYWNY bądź GNW i zmienia on wymagania regulamin
 2.1. Wrzucanie surowców z swojej epoki, poprzedniej epoki oraz następnej epoki do skarbca gildyjnego w sumie 100 w ciągu miesiąca. <br>
 2.2. Branie udziału w Wyprawie Gildyjnej co najmniej kończąc 1 etap [16/48konfliktów] każdego tygodnia. <br></strong>
 2.3. Punkt 2.1. i 2.2. regulaminu nie dotyczy szlachciców o opłaconym statusie GNW. <br>
-2.4. Wszelkie nadwyżki z podpunktu 2.1 są uznawane za dary i nie są wliczane do balansu w następnym dwumiesięczniku. <br>
+2.4. Wszelkie nadwyżki z podpunktu 2.1 są uznawane za dary i nie są wliczane do balansu w następnym miesiącu. <br>
 3. Reklamowanie/polecanie innej gildii w grze FoE jest karane wydaleniem z gildii i dodaniem gracza na czarną listę lub karą wyznaczoną przez Barona. <br>
 3.1. Reklamowanie gier, usług oraz rzeczy nienależących do organizacji LTD Gem lub Innogames* jest karane wydaleniem z gildii i dodaniem gracza na czarną listę. <br>
 3.2. Osoby ukarane zgodnie z punktem 3 mogą zgłosić zażalenie odnośnie wydanego wyroku do Rady LTD. <br>
@@ -187,7 +187,7 @@ Szlachcic może mieć status AKTYWNY bądź GNW i zmienia on wymagania regulamin
 17.2. Opłaty za czynności i ustalenia nie ustalone w tym regulaminie bądź załącznikach ustala Baron i informacje o nich uzyskasz od Barona bądź moderatora.
 
 Koniec REGULAMINU.</p>
-z dnia 20 kwietnia 2020 Edycja numer 45 Autor: Jeremi "ErtYwek"
+z dnia 20 kwietnia 2020 Edycja numer 46 Autor: Jeremi "ErtYwek" w FoE "DErtyEmp"
 <p>//// //// //// //// |Chameleon is a invisible player| \\\\ \\\\ \\\\ \\\\</p>
 Kontakt z Radą LTD: <a target="_blank" href="https://www.facebook.com/groups/ltdgw/">https://www.facebook.com/groups/ltdgw/</a>
 Kruczki Regulaminowe:
