--- a/LTD/r1/index.html
+++ b/LTD/r1/index.html
@@ -136,7 +136,7 @@ Szlachcic może mieć status AKTYWNY bądź GNW i zmienia on wymagania regulamin
 1. Nie wolno obrażać żadnego szlachcica w naszej gildii. <br>
 1.1. Obrażanie moderatora bądź Barona kończy się obowiązkową karą zaznaczoną w punkcie 9. <br>
 <strong>2. Szlachcic musi wybrać między 2 obowiązkami 2.1 lub 2.2 inaczej poniesie karę zaznaczoną w punkcie 9. <br>
-2.1. Wrzucanie surowców z swojej epoki, poprzedniej epoki oraz następnej epoki do skarbca gildyjnego w sumie 100 w ciągu miesiąca. <br>
+2.1. Wrzucanie surowców z swojej epoki/poprzedniej epoki/następnej epoki do skarbca gildyjnego w sumie 200 w każdy kalendarzowy miesiąc. <br>
 2.2. Branie udziału w Wyprawie Gildyjnej co najmniej kończąc 1 etap [16/48konfliktów] każdego tygodnia. <br></strong>
 2.3. Punkt 2.1. i 2.2. regulaminu nie dotyczy szlachciców o opłaconym statusie GNW. <br>
 2.4. Wszelkie nadwyżki z podpunktu 2.1 są uznawane za dary i nie są wliczane do balansu w następnym miesiącu. <br>
@@ -222,7 +222,7 @@ function myFunction() {
   document.getElementById("myBar").style.width = scrolled + "%";
 }
 </script>
-<script src="MinimalistSnow.js"></script>
+<!--<script src="MinimalistSnow.js"></script>-->
 
 </body>
 </html>
