--- a/LTD/r1/index.html
+++ b/LTD/r1/index.html
@@ -196,6 +196,8 @@ Jeśli punkt wyznacza jako karę możliwości z punktu 9 to gracz musi być poin
 
 <h3>Załącznik 2 do REGULAMINU "CZARNA LISTA czyli nieakceptowani w gildii gracze:"</h3>
 
+vodix96<br>
+
 </div>
 
 
